--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.12.3",
+    "mongoose": "^4.10.8",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1"
   }
