--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.10.8",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0"
   }
 }
